--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.0"
+    "sequelize": "^6.31.0",
+    "pg": "^8.10.0",
+    "pg-hstore": "^2.3.4",
+    "mysql2": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
